tests/ui/type/type-ascription-instead-of-statement-end.stderr
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-instead-of-statement-end.rs:2:21
   |
LL |     println!("test"):
   |                     ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-instead-of-statement-end.rs:7:21
   |
LL |     println!("test"): 0;
   |                     ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: aborting due to 2 previous errors

